# chicago-smart-city-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_app.sh
app/: __init__.py  main.py
app/api/routes/: cta.py  health.py  restaurants.py
app/core/: __init__.py  config.py
app/mappers/: cta.py  restaurants.py
app/routes/: health.py
app/schemas/: cta.py  health.py  restaurants.py
app/services/: chicago_data.py  cta_data.py  restaurant_data.py
tests/: test_cta.py  test_health.py
